about us section

--- a/Divine Dine/index.html
+++ b/Divine Dine/index.html
@@ -115,11 +115,26 @@
 
     <!-- about us section starts -->
     <section>
-        
+        <div class="about-container">
+            <div class="about-information">
+                <div class="about-text">
+                    <h3>Owner</h3>
+                    <h2>Michael Brown</h2>
+                    <p>"Grateful for the exceptional team behind our luxury restaurant's succes. Thanks to each person who has trusted in us, eternally grateful."</p>
+                </div>
+                <picture class="about-image">
+                    <source srcset="src/img/about.webp" type="image/webp">
+                    <source srcset="src/img/about.jpg" type="image/jpeg">
+                    <img src="src/img/about.jpg" alt="">
+                </picture>
+            </div>
+        </div>
     </section>
     <!-- about us section ends -->
 
-  
+  <div>
+    <p>jfskdhakfhsaf</p>
+  </div>
     <!-- swiper.js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <!-- javascript  -->
