new about us section

--- a/Divine Dine/index.html
+++ b/Divine Dine/index.html
@@ -122,19 +122,27 @@
                     <h2>Michael Brown</h2>
                     <p>"Grateful for the exceptional team behind our luxury restaurant's succes. Thanks to each person who has trusted in us, eternally grateful."</p>
                 </div>
-                <picture class="about-image">
-                    <source srcset="src/img/about.webp" type="image/webp">
-                    <source srcset="src/img/about.jpg" type="image/jpeg">
-                    <img src="src/img/about.jpg" alt="">
-                </picture>
+                <div class="about-text">
+                    <h3>Chef</h3>
+                    <h2>Kevin Draxler</h2>
+                    <p>"Never in my entire career have I known such a united team as the one we have here; undoubtedly, we are a great family."</p>
+                </div>
+                <div class="about-text">
+                    <h3>Manager</h3>
+                    <h2>Tomas Edison</h2>
+                    <p>"As a manager, I feel proud of everything we are achieving and of how people are receiving us every day."</p>
+                </div>  
             </div>
         </div>
     </section>
     <!-- about us section ends -->
 
-  <div>
-    <p>jfskdhakfhsaf</p>
-  </div>
+    <!-- menu section starts -->
+    <section>
+
+    </section>
+    <!-- menu section ends -->
+    
     <!-- swiper.js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <!-- javascript  -->
