--- a/Divine Dine/index.html
+++ b/Divine Dine/index.html
@@ -138,8 +138,23 @@
     <!-- about us section ends -->
 
     <!-- menu section starts -->
-    <section>
-
+    <section class="menu">
+        <div class="menu-container">
+            <picture>
+                <source srcset="src/img/menu.webp" type="image/webp">
+                <source srcset="src/img/menu.png" type="image/png">
+                <img src="src/img/menu.png" alt="">
+            </picture>
+            <div class="menu-info">
+                <h2>Exclusive Gourmet Menu</h2>
+                <p>
+                    Discover a unique selection of dishes carefully crafted with fresh, high-quality ingredients, designed to satisfy the most discerning palates.
+                </p>
+                <a href="" download="">
+                    Explore Our Menu
+                </a>
+            </div>
+        </div>
     </section>
     <!-- menu section ends -->
     
