private rooms section

--- a/Divine Dine/index.html
+++ b/Divine Dine/index.html
@@ -150,13 +150,43 @@
                 <p>
                     Discover a unique selection of dishes carefully crafted with fresh, high-quality ingredients, designed to satisfy the most discerning palates.
                 </p>
-                <a href="" download="">
+                <a href="src/img/gourmet-menu.pdf" download="gourmet-menu.pdf">
                     Explore Our Menu
                 </a>
             </div>
         </div>
     </section>
     <!-- menu section ends -->
+
+    <!-- private rooms section starts -->
+    <section>
+        <div class="private-container">
+            <div class="private-info">
+                <div class="private-text">
+                    <h2>Private Rooms</h2>
+                    <p>Indulge in our luxury dining experience with exclusive private rooms, offering intimate settings for an unforgettable culinary journey.</p>
+                </div>
+                <div class="private-form">
+                    <form>
+                        <h2>Contact Us</h2>
+
+                        <label for="name">Full Name:</label>
+                        <input type="text" id="name" name="name" placeholder="Name" required>
+
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" placeholder="Email" required>
+
+                        <label for="message">Message:</label>
+                        <textarea name="message" id="message" placeholder="Tell us" required></textarea>
+                      
+                        <input type="submit" value="Send">
+                    </form>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- private rooms section ends -->
     
     <!-- swiper.js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
