--- a/Divine Dine/index.html
+++ b/Divine Dine/index.html
@@ -24,10 +24,17 @@
                 <a href="#about">About Us</a>
                 <a href="#menu">Menu</a>
                 <a href="#private">Private Rooms</a>
-                <button>
+                <a href="https://api.whatsapp.com/send?phone=618440793" target="_blank">
+                    <button>
+                        <img src="src/img/whatsapp.ico" alt="">
+                        Book Now
+                    </button>
+                </a>
+
+                <!-- <button>
                     <img src="src/img/whatsapp.ico" alt="">
                     <a href="https://api.whatsapp.com/send?phone=618440793" target="_blank">Book Now</a>
-                </button>                
+                </button>                 -->
             </nav>
         </div>  
     </header>
